# jaguar

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: Application.h  ApplicationWin.h  Camera.h  ColorBuffer.h  DepthBuffer.h  GpuBuffer.h  GpuResource.h  PixelBuffer.h  Shader.h
shaders/: shader.wgsl
src/: Application.cpp  ApplicationWin.cpp  CMakeLists.txt  Camera.cpp  ColorBuffer.cpp  DepthBuffer.cpp  Shader.cpp
